log
Fri 22 Mar 2024 12:08:19 AM UTC: 
 exercises.c | 39 ++++++++++++++++++++++++++++++++++++++-
 1 file changed, 38 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:88:13: error: comparison between pointer and integer [-Werror]
   88 |     if(dato == elem){
      |             ^~
exercises.c: In function ‘copia_pila’:
exercises.c:106:11: error: implicit declaration of function ‘is_empty’ [-Werror=implicit-function-declaration]
  106 |   while (!is_empty(P1)) {
      |           ^~~~~~~~
exercises.c:115:3: error: implicit declaration of function ‘destroy_stack’ [-Werror=implicit-function-declaration]
  115 |   destroy_stack(auxStack);
      |   ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fdc8a19
Fri 22 Mar 2024 12:14:14 AM UTC: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
e5d4332
Fri 22 Mar 2024 12:17:14 AM UTC: 
 exercises.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:133:11: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
  133 |       if (isEmpty(stack) || *(char*)pop(stack) != '(') {
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
36529c9
